--- a/HTML/project(css).html
+++ b/HTML/project(css).html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Web Player: Music for everyone</title>
-    <link rel="stylesheet" href="\style\project(css).css">
-    <link rel="icon" href="\Images, icons of projects\css(project) images\logo (1).png">
+    <link rel="stylesheet" href="style\project(css).css">
+    <link rel="icon" href="Images, icons of projects\css(project) images\logo (1).png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
             <div class="library">
                 <div class="options">
                     <div class="lib-option nav-option">
-                        <img src="\Images, icons of projects\css(project) images\library_icon.png">
+                        <img src="Images, icons of projects\css(project) images\library_icon.png">
                         <a href="https://">Your Library</a>
                     </div>
                     <div class="lib-icons">
@@ -54,9 +54,9 @@
         <div class="main-content hide1">
             <div class="sticky-nav">
                 <div class="sticky-nav-icons">
-                    <img src="\Images, icons of projects\css(project) images\backward_icon.png" class="checkin">
+                    <img src="Images, icons of projects\css(project) images\backward_icon.png" class="checkin">
                     <label for="checkin" type="checkbox"></label>
-                    <img src="\Images, icons of projects\css(project) images\forward_icon.png" class="hide">
+                    <img src="Images, icons of projects\css(project) images\forward_icon.png" class="hide">
                 </div>
                 <div class="sticky-nav-options">
                     <button class="badge hide">Explore Premium</button>
@@ -68,7 +68,7 @@
                 <h2>Recently played</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card1img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
@@ -76,27 +76,27 @@
                 <h2>Trending now near you</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card2img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card2img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card3img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card3img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card4img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card4img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card2img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card2img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card3img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card3img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
@@ -107,17 +107,17 @@
                 </div>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card5img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card5img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card6img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card6img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
                     <div class="card">
-                        <img src="\Images, icons of projects\css(project) images\card1img.jpeg" class="card-img">
+                        <img src="Images, icons of projects\css(project) images\card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updates of the most played tracks...</p>
                     </div>
@@ -126,21 +126,21 @@
         </div>
         <div class="music-player">
             <div class="left-side hide">
-                <img src="\Images, icons of projects\css(project) images\album_picture.jpeg" class="left-img">
+                <img src="Images, icons of projects\css(project) images\album_picture.jpeg" class="left-img">
                 <div class="down">
                     <p class="hea">Daylight</p>
                     <p class="bea">David Kushner</p>
                 </div>
-                <img src="\Images, icons of projects\css(project) images\album_icon1.png" class="left1">
-                <img src="\Images, icons of projects\css(project) images\album_icon2.png" class="left2">
+                <img src="Images, icons of projects\css(project) images\album_icon1.png" class="left1">
+                <img src="Images, icons of projects\css(project) images\album_icon2.png" class="left2">
             </div>
             <div class="play-button">
                 <div class="upper-player">
-                    <img src="\Images, icons of projects\css(project) images\player_icon1.png" class="shuffle">
-                    <img src="\Images, icons of projects\css(project) images\player_icon2.png" class="skip">
-                    <img src="\Images, icons of projects\css(project) images\player_icon3.png" class="play">
-                    <img src="\Images, icons of projects\css(project) images\player_icon4.png" class="skip">
-                    <img src="\Images, icons of projects\css(project) images\player_icon5.png" class="shuffle">
+                    <img src="Images, icons of projects\css(project) images\player_icon1.png" class="shuffle">
+                    <img src="Images, icons of projects\css(project) images\player_icon2.png" class="skip">
+                    <img src="Images, icons of projects\css(project) images\player_icon3.png" class="play">
+                    <img src="Images, icons of projects\css(project) images\player_icon4.png" class="skip">
+                    <img src="Images, icons of projects\css(project) images\player_icon5.png" class="shuffle">
                 </div>
                 <div class="slider-down">
                     <span class="t1">1:55</span><input type="range" min="0" max="100" class="timer-bar" step="1"><span class="t1">3:33</span>
@@ -148,11 +148,11 @@
             </div>
             <div class="right-side hide">
                 <div class="right-side-icons">
-                    <img src="\Images, icons of projects\css(project) images\controls_icon1.png" class="s1">
-                    <img src="\Images, icons of projects\css(project) images\controld_icon2.png" class="s1">
-                    <img src="\Images, icons of projects\css(project) images\controls_icon3.png" class="s2">
-                    <img src="\Images, icons of projects\css(project) images\controls_icon4.png" class="s2">
-                    <img src="\Images, icons of projects\css(project) images\controls_icon5.png" class="s1">
+                    <img src="Images, icons of projects\css(project) images\controls_icon1.png" class="s1">
+                    <img src="Images, icons of projects\css(project) images\controld_icon2.png" class="s1">
+                    <img src="Images, icons of projects\css(project) images\controls_icon3.png" class="s2">
+                    <img src="Images, icons of projects\css(project) images\controls_icon4.png" class="s2">
+                    <img src="Images, icons of projects\css(project) images\controls_icon5.png" class="s1">
                 </div>
                 <div class="right-side-slider">
                     <input type="range" min="0" max="100" class="sound-bar" step="1">
